<resources>
    <string name="app_name">Petrolq</string>
    <string name="map_key" translatable="false">AIzaSyDOAWSxdE1PMlBYW1-JdE7Y7hvhXmvyh4E</string>
    <string name="update">update</string>
    <string name="cost">Cost</string>
    <string name="quality">Quality</string>
    <string name="quantity">Quantity</string>
    <string name="next">next</string>
    <string name="create_new_account">Create new Account</string>
    <string name="verify">verify</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="cancel">Cancel</string>
    <string name="navigate">Navigate</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="logout">LOGOUT</string>
    <string name="history">History</string>
    <string name="current_status">CURRENT STATUS</string>
    <string name="petrolq">PetrolQ</string>
    <string name="presenting">Presenting</string>
    <string name="by">By</string>
    <string name="tech_hydran">Tech Hydran</string>
    <string name="to">To</string>
    <string name="todo">TODO</string>
    <string name="bunkname">bunkname</string>
</resources>